--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -4,36 +4,50 @@ on:
   schedule:
     # Runs every 6 hours (adjust cron schedule as needed)
     # Use crontab guru to help: https://crontab.guru/
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *' # Runs at 00:00, 06:00, 12:00, 18:00 UTC
   # Allows manual triggering from GitHub Actions tab
   workflow_dispatch:
 
 jobs:
   collect_and_process:
     runs-on: ubuntu-latest # Use a standard Linux runner
-    timeout-minutes: 60 # Max job runtime (adjust if needed)
+    timeout-minutes: 60 # Max job runtime (increase if scripts take longer)
 
     steps:
     - name: Check out repository code
-      uses: actions/checkout@v4 # Fetches your code
+      uses: actions/checkout@v4 # Fetches your code from the repository
+
+    # --- ADDED FOR DEBUGGING ---
+    - name: List files in checkout directory
+      run: |
+        echo "Listing files in current directory (${PWD}):"
+        ls -la
+    # --- END DEBUGGING STEP ---
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11' # Match the Python version used in Replit if possible
+        python-version: '3.11' # Try to match Replit Python version
 
-    - name: Install uv (or pip/pip3 if preferred)
+    - name: Install uv (modern pip alternative)
       run: |
+        echo "Installing uv..."
         curl -LsSf https://astral.sh/uv/install.sh | sh
-        source $HOME/.cargo/env
+        # Source environment variables set by the install script
+        # Use GITHUB_ENV for persistence across steps
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-        uv --version # Verify uv install
+        source $HOME/.cargo/env
+        echo "Verifying uv installation:"
+        uv --version
+        echo "uv installed to PATH."
+
 
     - name: Install Python dependencies using uv
       run: |
-        uv pip install -r requirements.txt # Assumes you create/maintain requirements.txt
-        # Or install individually if no requirements.txt:
-        # uv pip install requests beautifulsoup4 lxml psycopg2-binary pymongo praw tweepy==4.14.0 vaderSentiment
+        echo "Attempting to install dependencies from requirements.txt..."
+        uv pip install -r requirements.txt
+        echo "Dependency installation step finished."
+
 
     - name: Run the master task script
       env: # Make GitHub secrets available as environment variables
@@ -44,6 +58,8 @@ jobs:
         REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
         TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
         WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
-        # Add other TWITTER secrets here if needed
+        # Add other secrets if you used them
       run: |
+        echo "Executing master Python script..."
         python3 run_all_tasks.py # Execute your master script
+        echo "Master script execution finished."
