--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -10,47 +10,50 @@ on:
 
 jobs:
   collect_and_process:
-    runs-on: ubuntu-latest # Use a standard Linux runner
-    timeout-minutes: 60 # Max job runtime (increase if scripts take longer)
+    # Run on the latest version of Ubuntu provided by GitHub Actions runners
+    runs-on: ubuntu-latest
+    # Set a maximum runtime for the entire job (e.g., 60 minutes)
+    timeout-minutes: 60
 
     steps:
+    # Step 1: Check out your repository code onto the runner
     - name: Check out repository code
-      uses: actions/checkout@v4 # Fetches your code from the repository
+      uses: actions/checkout@v4
 
-    # --- ADDED FOR DEBUGGING ---
+    # Step 2: List files to verify requirements.txt is checked out (Debugging step)
     - name: List files in checkout directory
       run: |
         echo "Listing files in current directory (${PWD}):"
         ls -la
-    # --- END DEBUGGING STEP ---
 
+    # Step 3: Set up the specified Python version
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11' # Try to match Replit Python version
+        python-version: '3.11' # Use a specific version, align with your development env
 
+    # Step 4: Install uv, a faster Python package installer/resolver
     - name: Install uv (modern pip alternative)
       run: |
         echo "Installing uv..."
         curl -LsSf https://astral.sh/uv/install.sh | sh
-        # Source environment variables set by the install script
-        # Use GITHUB_ENV for persistence across steps
+        # Add uv's install location to the runner's PATH environment variable
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-        source $HOME/.cargo/env
-        echo "Verifying uv installation:"
+        # Verify installation (optional but good practice)
         uv --version
-        echo "uv installed to PATH."
 
-
+    # Step 5: Install Python dependencies using uv, referencing the full path
     - name: Install Python dependencies using uv
       run: |
-        echo "Attempting to install dependencies from requirements.txt..."
-        uv pip install -r requirements.txt
+        echo "Attempting to install dependencies from ${{ github.workspace }}/requirements.txt ..."
+        # Explicitly use the full path with github.workspace variable
+        uv pip install -r ${{ github.workspace }}/requirements.txt
         echo "Dependency installation step finished."
 
-
+    # Step 6: Run your main Python script that orchestrates other scripts
     - name: Run the master task script
-      env: # Make GitHub secrets available as environment variables
+      # Pass GitHub Secrets securely as environment variables to the script
+      env:
         POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
         MONGO_URI: ${{ secrets.MONGO_URI }}
         REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
@@ -58,8 +61,9 @@ jobs:
         REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
         TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
         WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
-        # Add other secrets if you used them
+        # Add any other necessary secrets here using the same ${{ secrets.SECRET_NAME }} syntax
+      # Execute the script using python3
       run: |
-        echo "Executing master Python script..."
-        python3 run_all_tasks.py # Execute your master script
+        echo "Executing master Python script (run_all_tasks.py)..."
+        python3 run_all_tasks.py
         echo "Master script execution finished."
