--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -2,7 +2,6 @@ name: Scheduled Data Collection
 
 on:
   schedule:
-    # Runs every 6 hours (adjust cron schedule as needed)
     - cron: '0 */6 * * *'  # Runs at 00:00, 06:00, 12:00, 18:00 UTC
   workflow_dispatch:  # Allows manual triggering from GitHub Actions tab
 
@@ -16,24 +15,19 @@ jobs:
     - name: Check out repository code
       uses: actions/checkout@v4
 
-    # Step 2: List files to verify requirements.txt is checked out
-    - name: List files in checkout directory
+    # Step 2: List all files in the repository for debugging
+    - name: List all files in the directory after checkout
       run: |
-        echo "Listing files in current directory (${PWD}):"
-        ls -la
+        echo "Listing files in /home/runner/work/web3Jobs/web3Jobs:"
+        ls -la /home/runner/work/web3Jobs/web3Jobs
 
-    # Step 3: Debug the workspace path
-    - name: Debug workspace path
-      run: |
-        echo "GitHub workspace path: ${{ github.workspace }}"
-
-    # Step 4: Set up Python
+    # Step 3: Set up Python
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    # Step 5: Install uv (modern pip alternative)
+    # Step 4: Install uv (modern pip alternative)
     - name: Install uv (modern pip alternative)
       run: |
         echo "Installing uv..."
@@ -41,16 +35,12 @@ jobs:
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
         uv --version  # Verify that uv is installed successfully
 
-    # Step 6: Create virtual environment, activate it, and install dependencies
-    - name: Create virtual environment with uv and install dependencies
+    # Step 5: Create and activate virtual environment, install dependencies
+    - name: Create and activate virtual environment with uv, then install dependencies
       run: |
         # Create the virtual environment using uv
         uv venv venv
-        # List the contents of the 'venv' directory to ensure it's created
-        echo "Listing contents of the 'venv' directory:"
-        ls -la venv
-        # Activate the virtual environment and install dependencies
-        source venv/bin/activate
+        source venv/bin/activate  # Activate the environment
         echo "Attempting to install dependencies from ${{ github.workspace }}/requirements.txt ..."
         if [ -f "${{ github.workspace }}/requirements.txt" ]; then
           uv pip install -r ${{ github.workspace }}/requirements.txt
@@ -60,7 +50,7 @@ jobs:
         fi
         echo "Dependency installation step finished."
 
-    # Step 7: Run your main Python script that orchestrates other scripts
+    # Step 6: Run your master Python script that orchestrates other scripts using absolute path
     - name: Run the master task script
       env:
         POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
@@ -71,7 +61,7 @@ jobs:
         TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
         WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
       run: |
-        echo "Executing master Python script (run_all_tasks.py)..."
+        echo "Executing master Python script with absolute path..."
         source venv/bin/activate  # Ensure the environment is activated
-        python3 run_all_tasks.py
+        python3 /home/runner/work/web3Jobs/web3Jobs/run_all_tasks.py
         echo "Master script execution finished."
