--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -2,80 +2,29 @@ name: Scheduled Data Collection
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Runs at 00:00, 06:00, 12:00, 18:00 UTC
-  workflow_dispatch:  # Allows manual triggering from GitHub Actions tab
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
 
 jobs:
   collect_and_process:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-
     steps:
-    # Step 1: Check out repository code onto the runner
-    - name: Check out repository code
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    # Step 2: List all files in the repository for debugging
-    - name: List all files in the directory after checkout
-      run: |
-        echo "Listing files in /home/runner/work/web3Jobs/web3Jobs:"
-        ls -la /home/runner/work/web3Jobs/web3Jobs
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    # Step 3: Set up Python
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Install uv
+        run: |
+          pip install uv
 
-    # Step 4: Install uv (modern pip alternative)
-    - name: Install uv (modern pip alternative)
-      run: |
-        echo "Installing uv..."
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-        uv --version  # Verify that uv is installed successfully
-
-    # Step 5: Create and activate virtual environment with uv, then install dependencies
-    - name: Create and activate virtual environment with uv, then install dependencies
-      run: |
-        # Create the virtual environment using uv
-        echo "Creating virtual environment..."
-        uv venv venv
-        
-        # Verify the virtual environment directory exists
-        echo "Listing contents of the 'venv' directory:"
-        ls -la venv
-
-        # Activate the virtual environment
-        echo "Activating the virtual environment..."
-        source venv/bin/activate
-        
-        # Ensure uv pip is used in the virtual environment
-        which pip
-        pip --version
-        
-        # Install dependencies
-        echo "Attempting to install dependencies from ${{ github.workspace }}/requirements.txt ..."
-        if [ -f "${{ github.workspace }}/requirements.txt" ]; then
+      - name: Install Python dependencies using uv
+        run: |
+          uv venv
           uv pip install -r ${{ github.workspace }}/requirements.txt
-        else
-          echo "Error: requirements.txt not found!"
-          exit 1
-        fi
-        echo "Dependency installation step finished."
 
-    # Step 6: Run your master Python script that orchestrates other scripts using absolute path
-    - name: Run the master task script
-      env:
-        POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
-        MONGO_URI: ${{ secrets.MONGO_URI }}
-        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
-        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
-        REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
-        TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
-        WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
-      run: |
-        echo "Executing master Python script with absolute path..."
-        source venv/bin/activate  # Ensure the environment is activated
-        python3 /home/runner/work/web3Jobs/web3Jobs/run_all_tasks.py
-        echo "Master script execution finished."
+      - name: Run data collection script
+        run: |
+          uv run python scripts/collect_data.py
