--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-requests>=2.28.0
-pandas>=1.5.0
-pymongo>=4.3.0
-psycopg2-binary>=2.9.5
-praw>=7.6.0
-tweepy>=4.12.0
-# Add any other dependencies your scripts need
+requests
+beautifulsoup4
+lxml
+psycopg2-binary
+pymongo
+praw
+tweepy==4.14.0
+vaderSentiment
