--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -46,8 +46,8 @@ jobs:
       # Only run if the script exists (checked in step 2 implicitly by not exiting)
       # Optional: add an explicit `if: steps.verify_files.outputs.<something>` if needed
       run: |
-        echo "Running test_import.py script..."
-        python3 ${{ github.workspace }}/test_import.py
+        echo "Running test_imports.py script..." # <<< Update echo too
+        python3 ${{ github.workspace }}/test_imports.py # <<< CORRECTED FILENAME (plural)
         echo "Import test script finished."
 
     # 6. Check Secrets (No longer includes file permission step - redundant if run via python3)
